Docstrings, comments en aanpassing README

--- a/snake_env/manualsnek.ipynb
+++ b/snake_env/manualsnek.ipynb
@@ -60,10 +60,28 @@
     "font = pygame.font.SysFont(None, 36)\n",
     "\n",
     "def draw_rect(pos, color):\n",
+    "    \"\"\"\n",
+    "    Functie om een vierkant te tekenen in pygame\n",
+    "\n",
+    "    Parameters:\n",
+    "    ---------\n",
+    "        pos : tuple\n",
+    "            Een tuple met de bijbehorende x en y waarden voor de locatie\n",
+    "        color : tuple\n",
+    "            Een tuple met de RGD waarde voor de gewenste kleur\n",
+    "    \"\"\"\n",
     "    x, y = pos\n",
     "    pygame.draw.rect(screen, color, (x * CELL_SIZE, y * CELL_SIZE, CELL_SIZE, CELL_SIZE))\n",
     "\n",
     "def place_food(snake):\n",
+    "    \"\"\"\n",
+    "    Een functie die in staat is om voedsel op het speelveld te plaatsen\n",
+    "\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "        snake : list\n",
+    "            De lijst met alle locaties die de slang bezet\n",
+    "    \"\"\"\n",
     "    while True:\n",
     "        pos = (random.randint(0, GRID_SIZE - 1), random.randint(0, GRID_SIZE - 1))\n",
     "        if pos not in snake:\n",
@@ -71,6 +89,9 @@
     "\n",
     "\n",
     "def show_start_screen():\n",
+    "    \"\"\"\n",
+    "    Een functie die het startscherm van de baseline test Snake game weergeeft\n",
+    "    \"\"\"\n",
     "    screen.fill(BLACK)\n",
     "    title = font.render(\"Welkom bij Snake!\", True, WHITE)\n",
     "\n",
@@ -98,6 +119,14 @@
     "                waiting = False\n",
     "\n",
     "def show_scores(scores):\n",
+    "    \"\"\"\n",
+    "    Een functie die alle resultaten weergeeft op het scherm, samen met het gemiddelde\n",
+    "\n",
+    "    Parameters:\n",
+    "    ----------\n",
+    "        scores : list\n",
+    "            Lijst met alle behaalde scores\n",
+    "    \"\"\"\n",
     "    screen.fill(BLACK)\n",
     "    title = font.render(\"Resultaten:\", True, WHITE)\n",
     "    screen.blit(title, (SCREEN_SIZE // 2 - title.get_width() // 2, 40))\n",
@@ -125,6 +154,9 @@
     "                sys.exit()\n",
     "\n",
     "def game_loop():\n",
+    "    \"\"\"\n",
+    "    De functie die toelaat om de game te spelen\n",
+    "    \"\"\"\n",
     "    snake = [(10, 10), (9, 10), (8, 10)] \n",
     "    direction = 1\n",
     "    food = place_food(snake)\n",
